--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div>
                         <h2 class="about__subtitle">Saya Mochammad Wahyu Ramadhan</h2>
                         <span class="about__profession">HR Enthusiast</span>
-                        <p class="about__text">Saya mahasiswa psikologi, semester 4. Saya sedang mendalami bidang yang berkaitan 
+                        <p class="about__text">Saya mahasiswa psikologi semester 5. Saya sedang mendalami bidang yang berkaitan 
                             dengan ilmu psikologi, khususnya di ranah Psikologi Industri dan juga Klinis. Dengan minat 
                             besar untuk mengembangkan karir di bidang Human Resources (HR), meskipun saya belum 
                             memiliki pengalaman kerja langsung di bidang HR, saya sangat termotivasi untuk belajar 
