--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
 
             <!--===== SKILLS =====-->
             <section class="skills section" id="skills">
-                <h2 class="section-title">Skills</h2>
+                <h2 class="section-title">Keahlian</h2>
 
                 <div class="skills__container bd-grid">
                     <div class="skills__box">
-                        <h3 class="skills__subtitle">Soft Skills</h3>
+                        <h3 class="skills__subtitle">Soft Skill</h3>
                         <span class="skills__name">Komunikasi</span>
                         <span class="skills__name">Adaptif</span>
                         <span class="skills__name">Problem Solving</span>
                         <span class="skills__name">Leadership</span>
                         
-                        <h3 class="skills__subtitle">Hard Skills</h3>
+                        <h3 class="skills__subtitle">Hard Skill</h3>
                         <span class="skills__name">Figma</span>
                         <span class="skills__name">Micrososft Excel, Power Point, dan Word</span>
                         <span class="skills__name">Adobe Photoshop</span>
@@ -149,7 +149,7 @@
                 </div>
                 
                 <div class="footer__data">
-                    <h2 class="footer__title">FOLLOW</h2>
+                    <h2 class="footer__title">Ikuti</h2>
                     <a href="#" class="footer__social"><i class='bx bxl-facebook' ></i></a>
                     <a href="#" class="footer__social"><i class='bx bxl-instagram' ></i></a>
                     <a href="#" class="footer__social"><i class='bx bxl-twitter' ></i></a>
